// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - QuoteBubble doesn't show copy to clipboard button when it's disabled 1`] = `
<Wrapper>
  <Quote
    data-testid="quote"
  >
    Daily in 5 minutes and I'm still not sure what to say...
  </Quote>
  <BubbleTail
    variant="speech"
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders correct default quote 1`] = `
<Wrapper>
  <Quote
    data-testid="quote"
  >
    Daily in 5 minutes and I'm still not sure what to say...
  </Quote>
  <BubbleTail
    variant="speech"
  />
  <CopyButton
    valueToCopy="Daily in 5 minutes and I'm still not sure what to say..."
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders correctly thought variant of bubble 1`] = `
<Wrapper>
  <Quote
    data-testid="quote"
  >
    Daily in 5 minutes and I'm still not sure what to say...
  </Quote>
  <BubbleTail
    variant="thought"
  />
</Wrapper>
`;
